{
    "name": "InputSystem",
    "maps": [
        {
            "name": "ActionMap",
            "id": "579bd001-8b6f-47ad-bd96-315da1722822",
            "actions": [
                {
                    "name": "MoveStickFlag",
                    "type": "Button",
                    "id": "da7eed1c-6fbc-43f3-bef5-21675ad7eed9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveStickPos",
                    "type": "Value",
                    "id": "1b6a7990-72c7-4831-83d7-a888a8cba294",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d247fd00-490c-42dc-87c4-0d95e048ad7e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "MoveStickFlag",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c13a272b-83eb-4eea-9260-dc92c602b0a4",
                    "path": "<Touchscreen>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveStickFlag",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "614733ed-0c8c-4ac2-a810-def57bcf812b",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveStickPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "76c32b8e-e637-4601-92c7-ccdc6b3fb931",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveStickPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}